[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://interface/Interface.gd" type="Script" id=2]
[ext_resource path="res://screens/title_screen/TitleScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/SlidingPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://meta/achievements/FullmoonAchievement.tscn" type="PackedScene" id=5]
[ext_resource path="res://screens/ScreenFade.tscn" type="PackedScene" id=6]

[node name="MoonCheeser" type="Node"]
script = ExtResource( 1 )

[node name="Interface" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="TitleScreen" parent="Interface" instance=ExtResource( 3 )]
margin_left = 1.0
margin_right = 1.0

[node name="Achievements" type="CanvasLayer" parent="."]
layer = 2

[node name="SlidingPanel" parent="Achievements" instance=ExtResource( 4 )]

[node name="FullmoonAchievement" parent="." instance=ExtResource( 5 )]

[node name="Fade" type="CanvasLayer" parent="."]
layer = 4

[node name="ScreenFade" parent="Fade" instance=ExtResource( 6 )]
[connection signal="screen_changed" from="Interface" to="." method="_on_Interface_screen_changed"]
[connection signal="button_up" from="Interface/TitleScreen" to="Interface" method="_on_Screen_button_up"]
